# CrewAI-1

./: LICENSE  Readme.md
Gauge/01 - Unlocked/uv-helloworld/: pyproject.toml
Gauge/02 - Sculptor/uv-project/: pyproject.toml
Gauge/02 - Sculptor/uv-project/src/uv_project/: hello.py
Gauge/03 - LiteLLM/litellm-project/: pyproject.toml
Gauge/03 - LiteLLM/litellm-project/src/litellm_project/: hello.py
Gauge/04 - Basic Flow/crew_flow/: README.md  poem.txt  pyproject.toml
Gauge/04 - Basic Flow/crew_flow/src/crew_flow/: main.py
Gauge/05 - Grinding (Prompt Chaining, Router)/grinding/: FunFact.md  pyproject.toml
Gauge/05 - Grinding (Prompt Chaining, Router)/grinding/src/grinding/: __init__.py  promptchain.py  router.py  simpleflow.py
Gauge/06 - Advance Flow/advancedflow/: pyproject.toml
Gauge/06 - Advance Flow/advancedflow/src/advancedflow/: __init__.py  main.py
Gauge/06 - Advance Flow/advancedflow/src/advancedflow/crews/config/: agents.yaml  tasks.yaml
Gauge/06 - Advance Flow/advancedflow/src/advancedflow/crews/teaching_crew/: teaching_crew.py
Gauge/06 - Advance Flow/advancedflow/src/advancedflow/crews/teaching_crew/config/: agents.yaml  tasks.yaml
Gauge/07 - Dev Crew/: README.md  poem.txt  pyproject.toml
Gauge/07 - Dev Crew/config/: agents.yaml  tasks.yaml
Gauge/07 - Dev Crew/src/grinding/: crew.py
Gauge/07 - Dev Crew/src/grinding/crews/dev_crew/config/: agents.yaml
Gauge/08 - Flow Deployment/deploy/: README.md  pyproject.toml
Gauge/08 - Flow Deployment/deploy/src/deploy/: main.py
Gauge/09 - Agent Monitoring (Openlit)/monitoring/: README.md  pyproject.toml
Gauge/09 - Agent Monitoring (Openlit)/monitoring/src/monitoring/: crew.py  main.py
Gauge/10 - Agent Monitoring (AgentOps)/monitoring/: pyproject.toml  report.md
Gauge/10 - Agent Monitoring (AgentOps)/monitoring/src/monitoring/: crew.py  main.py
Gauge/11 - Planning Crew/: Crew_Core_Concepts_Planning_LLM.ipynb
Gauge/12 - Testing Crew/: Crew_Core_Concepts_Testing_LLM.ipynb
Gauge/13 - Training Crew/: Crew_Core_Concepts_Training_LLM.ipynb
Gauge/14 - Knowledge/: Crew_Core_Concepts_Knowledge.ipynb
Gauge/15 - Memory/: Crew_Core_Concepts_Memory.ipynb
Gauge/16 - Tools/: Crew_Core_Concepts_Tools.ipynb
Gauge/17 - Process & Collaboration/: Crew_Core_Concepts_Process_&_Collaboration.ipynb
Gauge/18 - Advance Tools/: Crew_Core_Concepts_Advanced_Tools.ipynb
Gauge/20 - Multi AI Agents/01 - Multi_AI_Agent_for_Research_and_Scribing_Using_CrewAI/: P01 - Multi_AI_Agent_for_Research_and_Scribing_Using_CrewAI.ipynb
Gauge/20 - Multi AI Agents/02 - Multi_AI_Agent_Customer_Support_Automation_Using_CrewAI/: P02 - Multi_AI_Agent_Customer_Support_Automation_Using_CrewAI.ipynb
Gauge/20 - Multi AI Agents/03 - Multi_AI_Agent_Tools_for_Customer_Outreach_Using_CrewAI/: P03 - Multi_AI_Agent_Tools_for_Customer_Outreach_Using_CrewAI.ipynb  utils.py
Gauge/20 - Multi AI Agents/04 - Multi_AI_Agent_Automate_Event_Planning_Using_CrewAI/: P04 - Multi_AI_Agent_Automate_Event_Planning_Using_CrewAI.ipynb
Gauge/20 - Multi AI Agents/05 - Multi_AI _Agent_Collaboration_for_Financial_Analysis_Using_CrewAI/: P05 - Multi_AI _Agent_Collaboration_for_Financial_Analysis_Using_CrewAI.ipynb
Gauge/20 - Multi AI Agents/06 - Multi_AI_Agent_To_Tailor_Job_Applications_Using_CrewAI/: P06_Multi_AI_Agent_To_Tailor_Job_Applications_Using_CrewAI.ipynb
