[project]
name = "grinding"
version = "0.1.0"
description = "grinding using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "litellm>=1.60.2",
]

[project.scripts]
kickoff = "grinding.main:kickoff"
plot = "grinding.main:plot"
dev-crew = "grinding.crew:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
