[project]
name = "uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EngineerAbdulQadir", email = "abdulqadirimran001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uv-project = "uv_project:main"
additional = "uv_project.hello:my_function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
