[project]
name = "advancedflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EngineerAbdulQadir", email = "abdulqadirimran001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
advancedflow = "advancedflow:main"
advflow = "advancedflow.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
